--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -6,24 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".ui.welcome_screen.WelcomeActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewWelcome"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutWelcomeNews"
         android:layout_width="0dp"
         android:layout_height="0dp"
-
+        android:layout_margin="16dp"
+        android:background="@drawable/welcome_layouts_shape"
         app:layout_constraintBottom_toTopOf="@+id/favoritesLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTitleWelcome"
-        android:layout_margin="20dp"
-        android:background="@drawable/welcome_layouts_shape"/>
+        app:layout_constraintTop_toBottomOf="@+id/textViewTitleWelcome">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewWelcome"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <TextView
         android:id="@+id/textViewTitleWelcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="64dp"
         android:fontFamily="@font/amaranth"
         android:text="ALL NEWS"
         android:textSize="34sp"
@@ -35,12 +45,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/favoritesLayout"
         android:layout_width="0dp"
-        android:layout_height="215dp"
+        android:layout_height="141dp"
+        android:layout_margin="16dp"
+        android:background="@drawable/welcome_layouts_shape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="20dp"
-        android:background="@drawable/welcome_layouts_shape">
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/textView2"
@@ -55,8 +65,9 @@
 
         <ImageView
             android:id="@+id/imageViewFavoritsIcon"
-            android:layout_width="254dp"
-            android:layout_height="152dp"
+            android:layout_width="253dp"
+            android:layout_height="98dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
@@ -73,6 +84,16 @@
         app:layout_constraintBottom_toTopOf="@+id/textViewTitleWelcome"
         app:layout_constraintEnd_toEndOf="@+id/textViewTitleWelcome"
         app:layout_constraintStart_toStartOf="@+id/textViewTitleWelcome" />
+
+    <ProgressBar
+        android:id="@+id/progressBarWelcome"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewWelcome"
+        app:layout_constraintEnd_toEndOf="@+id/recyclerViewWelcome"
+        app:layout_constraintStart_toStartOf="@+id/recyclerViewWelcome"
+        app:layout_constraintTop_toTopOf="@+id/recyclerViewWelcome" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
