--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -26,6 +26,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/progressBarWelcome"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -84,16 +94,6 @@
         app:layout_constraintBottom_toTopOf="@+id/textViewTitleWelcome"
         app:layout_constraintEnd_toEndOf="@+id/textViewTitleWelcome"
         app:layout_constraintStart_toStartOf="@+id/textViewTitleWelcome" />
-
-    <ProgressBar
-        android:id="@+id/progressBarWelcome"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewWelcome"
-        app:layout_constraintEnd_toEndOf="@+id/recyclerViewWelcome"
-        app:layout_constraintStart_toStartOf="@+id/recyclerViewWelcome"
-        app:layout_constraintTop_toTopOf="@+id/recyclerViewWelcome" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
