--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.News" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">#072448</item>
+        <item name="colorPrimaryVariant">#072448</item>
+        <item name="colorOnPrimary">#072448</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/darkgray</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
