--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
+            android:background="@color/gray"
             app:tabTextColor="@color/black"
             app:tabMode="scrollable"
             android:layout_width="match_parent"
