--- a/app/src/main/res/drawable/welcome_layouts_shape.xml
+++ b/app/src/main/res/drawable/welcome_layouts_shape.xml
@@ -5,5 +5,5 @@
     <stroke
         android:width="5dp"
         android:color="@color/black" />
-    <solid android:color="#F9F3F1"/>
+    <solid android:color="#ffffff"/>
 </shape>
