--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="tab_sports">#fA9797</color>
     <color name="tab_technology">#fFd49A</color>
     <color name="tab_favorites">#8Ef6aD</color>
+    <color name="light_blue">#2391DC</color>
 </resources>
