--- a/app/src/main/res/layout/welcome_news_item.xml
+++ b/app/src/main/res/layout/welcome_news_item.xml
@@ -92,6 +92,17 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.14285715" />
-
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationArrow"
+        android:translationZ="10dp"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        app:lottie_colorFilter="@color/light_blue"
+        app:lottie_url="REPLACE_JSON_URL"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:lottie_rawRes="@raw/arrow" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
