Send toast when api calls are over

--- a/app/src/main/res/layout/welcome_news_item.xml
+++ b/app/src/main/res/layout/welcome_news_item.xml
@@ -24,7 +24,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="32dp"
         android:lines="4"
         android:ellipsize="end"
         android:text="title"
@@ -62,6 +62,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:alpha="0.5"
+        android:lines="1"
+        android:ellipsize="end"
         android:text="Source"
         android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@id/divider"
@@ -101,6 +103,8 @@
         app:lottie_url="REPLACE_JSON_URL"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:lottie_rawRes="@raw/arrow" />
