--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -41,7 +41,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ProgressBar
-            android:visibility="visible"
+            android:visibility="invisible"
             tools:visibility="visible"
             android:id="@+id/progressBarWelcome"
             style="?android:attr/progressBarStyle"
@@ -51,6 +51,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/buttonRefresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Refresh"
+            android:visibility="invisible"
+            tools:visibility="visible"
+            android:backgroundTint="@color/gray"
+            app:strokeWidth="3dp"
+            app:layout_constraintBottom_toBottomOf="@+id/recyclerViewWelcome"
+            app:layout_constraintEnd_toEndOf="@+id/recyclerViewWelcome"
+            app:layout_constraintStart_toStartOf="@+id/recyclerViewWelcome"
+            app:layout_constraintTop_toTopOf="@+id/recyclerViewWelcome" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
