--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -55,6 +55,8 @@
         android:alpha="0.5"
         android:text="Source"
         android:textSize="10sp"
+        android:lines="1"
+        android:ellipsize="end"
         app:layout_constraintBottom_toTopOf="@id/divider"
         app:layout_constraintEnd_toEndOf="@+id/textViewTitle"
         app:layout_constraintStart_toStartOf="@+id/textViewTitle" />
