--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.welcome_screen.WelcomeActivity"
-    android:background="#acb992">
-
+    android:background="#550077ff">
+<!--#acb992-->
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="35dp"
